# delta_robot

./: .gitignore  LICENSE  README.md  requirements.txt
arduino/Control_Delta/: Control_Delta.ino
arduino/Delta_IK/: Delta_IK.ino
arduino/Test_Servos/: Test_Servos.ino
ros2_ws/src/delta_ikin/: package.xml
ros2_ws/src/delta_ikin/src/: ikin_server.cpp
ros2_ws/src/delta_ikin/srv/: Ikin.srv
ros2_ws/src/delta_robot_description/: package.xml
ros2_ws/src/delta_robot_description/launch/: JointStatePublisher.launch.py
ros2_ws/src/delta_robot_serial/: package.xml
ros2_ws/src/delta_robot_serial/launch/: PseudoArduino.launch.py
ros2_ws/src/delta_robot_serial/src/: delta_joint_pub.cpp  pseudo_arduino.cpp
ros2_ws/src/delta_trajectory/: package.xml
ros2_ws/src/delta_trajectory/action/: PosTraj.action
ros2_ws/src/delta_trajectory/src/: trajPlan_actionServer.cpp
