<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delta_ikin</name>
  <version>0.0.1</version>
  <description>Ikin.srv service and ikin_server node (Exercise 5)</description>
  <maintainer email="you@example.com">Giacomo Demetrio Masone</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
